# trisect

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
src/: delauney.rs  lib.rs  linalg.rs
